# dl-concepts-from-scratch

./: .gitignore  README.md
autograd/: playground.ipynb  pyproject.toml
autograd/tinygrad/: engine.py  nn.py
bpe-tokenizer/: Tokenization.ipynb  pyproject.toml
bpe-tokenizer/.ipynb_checkpoints/: Tokenization-checkpoint.ipynb
bpe-tokenizer/bpe_tokenizer/: base.py  basic.py  regex_tok.py
unet/: Unet.ipynb  dataset.py  inference.ipynb  model.py  playground.ipynb  pyproject.toml  transform.py  utils.py
