[tool.poetry]
name = "tinygrad"
version = "0.1.0"
description = "neural network backpropagation from scratch"
authors = ["Rajesh Baidya <abhi.crushefix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
graphviz = "^0.20.1"
torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
