[tool.poetry]
name = "bpe-tokenizer"
version = "0.1.0"
description = "implement bpe tokenization similar to GPT models"
authors = ["Rajesh Baidya <abhi.crushefix@gmail.com>"]
readme = "README.md"
packages = [{include = "bpe_tokenizer"}]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2023.12.25"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
