[tool.poetry]
name = "unet-dl-concept"
version = "0.1.0"
description = ""
authors = ["rajesh.baidya <rajesh.baidya@dkfz-heidelberg.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
torchvision = "^0.17.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
